# mattOS

./: .gitignore  CMakeLists.txt  CMakeToolchain32.cmake  CMakeToolchain64.cmake  README.md
source/kernel/: CMakeLists.txt  boot.s  main.c  terminal.c  terminal.h
source/libc/: CMakeLists.txt  stack_smash.c
source/libc/include/: assert.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  time.h
sysroot/boot/grub/: grub.cfg  menu.lst
toolchain/: build.sh
